This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Invalid format specifiers in MatchObject and StdPrinter repr
Type: behavior Stage: resolved
Components: Interpreter Core, Regular Expressions Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ezio.melotti, miss-islington, mrabarnett, serhiy.storchaka, sth
Priority: normal Keywords: patch

Created on 2019-03-09 16:53 by sth, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 12252 merged sth, 2019-03-09 16:54
PR 12263 merged miss-islington, 2019-03-10 10:29
Messages (4)
msg337574 - (view) Author: Stephan Hohe (sth) * Date: 2019-03-09 16:53
match_repr() and stdprinter_repr() contain calls to PyUnicode_FromFormat() with format specifiers that don't match the arguments.

See the upcoming pull request for details.
msg337604 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-03-10 10:29
New changeset 8b91edadc06dcb0d391a65d1ecdf07dcb429df1b by Serhiy Storchaka (sth) in branch 'master':
bpo-36251: Fix format strings used in match_repr() and stdprinter_repr(). (GH-12252)
https://github.com/python/cpython/commit/8b91edadc06dcb0d391a65d1ecdf07dcb429df1b
msg337607 - (view) Author: miss-islington (miss-islington) Date: 2019-03-10 10:52
New changeset e4be2057d4bd06eb56fbfef4e4ed88fff7fb47cd by Miss Islington (bot) in branch '3.7':
bpo-36251: Fix format strings used in match_repr() and stdprinter_repr(). (GH-12252)
https://github.com/python/cpython/commit/e4be2057d4bd06eb56fbfef4e4ed88fff7fb47cd
msg337608 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2019-03-10 10:56
Thank you for your contribution Stephan!

Versions older than 3.6 take only security fixes.

See also issue36254.
History
Date User Action Args
2022-04-11 14:59:12adminsetgithub: 80432
2019-03-10 10:56:34serhiy.storchakasetstatus: open -> closed
versions: - Python 3.4, Python 3.5, Python 3.6
type: behavior
messages: + msg337608

resolution: fixed
stage: patch review -> resolved
2019-03-10 10:52:58miss-islingtonsetnosy: + miss-islington
messages: + msg337607
2019-03-10 10:29:41miss-islingtonsetpull_requests: + pull_request12248
2019-03-10 10:29:21serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg337604
2019-03-09 16:54:13sthsetkeywords: + patch
stage: patch review
pull_requests: + pull_request12240
2019-03-09 16:53:01sthcreate