bpo-36251: Fix format strings used in match_repr() and stdprinter_repr(). (GH-12252)